// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marks the selected row as .active 1`] = `
<Sidebar
  active={1}
  bounties={
    Array [
      Object {
        "guid": "asdf",
      },
      Object {
        "guid": "demo",
      },
    ]
  }
  remove={[Function]}
  select={[Function]}
>
  <div
    className="Sidebar"
  >
    <header
      className="Sidebar-Header"
    >
      <img
        alt="Polyswarm logo"
        src="/img/polyswarm.svg"
      />
    </header>
    <ul
      className="Sidebar-Content"
    >
      <ListItem
        active={false}
        className="item-0"
        item="asdf"
        key="asdf"
        onClick={[Function]}
        remove={[Function]}
      >
        <li
          className="ListItem"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <p
            className="ListItem-Name"
          >
            asdf
          </p>
        </li>
      </ListItem>
      <ListItem
        active={true}
        className="item-1"
        item="demo"
        key="demo"
        onClick={[Function]}
        remove={[Function]}
      >
        <li
          className="ListItem active"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <p
            className="ListItem-Name"
          >
            demo
          </p>
        </li>
      </ListItem>
    </ul>
  </div>
</Sidebar>
`;

exports[`renders without crashing 1`] = `
<div
  class="Sidebar"
>
  <header
    class="Sidebar-Header"
  >
    <img
      alt="Polyswarm logo"
      src="/img/polyswarm.svg"
    >
      
    </img>
  </header>
  <ul
    class="Sidebar-Content"
  >
    
  </ul>
</div>
`;

exports[`shows alert when bounty has updated: true 1`] = `
<Sidebar
  bounties={
    Array [
      Object {
        "guid": "asdf",
        "updated": true,
      },
      Object {
        "guid": "demo",
      },
    ]
  }
  remove={[Function]}
  select={[Function]}
>
  <div
    className="Sidebar"
  >
    <header
      className="Sidebar-Header"
    >
      <img
        alt="Polyswarm logo"
        src="/img/polyswarm.svg"
      />
    </header>
    <ul
      className="Sidebar-Content"
    >
      <ListItem
        active={false}
        alert={true}
        className="item-0"
        item="asdf"
        key="asdf"
        onClick={[Function]}
        remove={[Function]}
      >
        <li
          className="ListItem"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="alert"
          />
          <p
            className="ListItem-Name"
          >
            asdf
          </p>
        </li>
      </ListItem>
      <ListItem
        active={false}
        className="item-1"
        item="demo"
        key="demo"
        onClick={[Function]}
        remove={[Function]}
      >
        <li
          className="ListItem"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <p
            className="ListItem-Name"
          >
            demo
          </p>
        </li>
      </ListItem>
    </ul>
  </div>
</Sidebar>
`;
